MODBULKOPS-256 - Link support